# test-mqtt_server

./: CMakeLists.txt  README.md  config.ini.test  main.cpp
includes/: header_checker.h  mqtt_server.h
proto/: Battery.proto  CMakeLists.txt  Call.proto  Charging_Information.proto  ControConnectionCheckAck.proto  ControlConnectionCheck.proto  Driving.proto  ErrorReport.proto  Event.proto  Header.proto  Monitoring_Information.proto  Poi.proto  Stop.proto  TripEnd.proto  TripStart.proto  VehicleRegistration.proto  VehicleRegistrationResponse.proto  WGS84_Geometry_Pose.proto  WGS84_Position.proto  WakeUp.proto  WakeUpAck.proto
proto/edition/: Battery.proto  Call.proto  Charging_Information.proto  ControConnectionCheckAck.proto  ControlConnectionCheck.proto  Driving.proto  ErrorReport.proto  Event.proto  Header.proto  Monitoring_Information.proto  Poi.proto  Stop.proto  TripEnd.proto  TripStart.proto  VehicleRegistration.proto  VehicleRegistrationResponse.proto  WGS84_Geometry_Pose.proto  WGS84_Position.proto  WakeUp.proto  WakeUpAck.proto
src/: header_checker.cpp  mqtt_server.cpp
